# BE

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml
alembic/: env.py
alembic/versions/: 67c33a924a48_테스트_완료.py  ed1476e78081_initial_migration_with_user_table.py
data/: Jeju_Safety_Accidents_2025.csv  jeju_accidents.csv  kma_jeju_grid_info.csv  제주특별자치도관광객안전사고_2021.csv
data/processed_chunks_results/: 제주공식관광가이드북_chunks.md  제주오름_chunks.md  제주한류컨텐츠_chunks.md  제주향토음식_chunks.md
data/processed_md_originals/: 제주공식관광가이드북.md  제주오름.md  제주한류컨텐츠.md  제주향토음식.md
docs/: guide.md
prompts/: jeju_accident_sql_agent_prompt.yaml  jeju_tourism_rag_prompt.yaml  search_query_translation.yaml  sql_agent_prompt.txt
rag_evaluation/: __init__.py  generate_dataset.py  langsmith_eval.py  ragas_eval.py  run_evaluation.py  translate_dataset.py  translator.py  upload_dataset_to_langsmith.py  validate_and_filter_dataset.py
rag_evaluation/dataset/: english_testset.csv  english_testset_filtered.csv  english_testset_filtered_origin.csv  english_testset_origin.csv  korean_ragas_results.csv  korean_testset.csv  korean_testset_origin.csv  ragas_results.csv
rag_evaluation/langsmith/: __init__.py  langsmith_eval.py  upload_dataset_to_langsmith.py
rag_evaluation/ragas/: __init__.py  generate_dataset.py  ragas_eval.py  ragas_eval_origin.py  translate_dataset.py  translate_dataset_llm.py  validate_and_filter_dataset.py
rag_evaluation/result/: english_ragas_results.csv  korean_ragas_results.csv  korean_ragas_results_20251124_230905.csv  korean_ragas_results_original.csv  (+8 more)
src/: config.py  core.py  data_loader.py  kiwi_tokenizer.py  main.py  models.py  schemas.py  services.py  tools.py
test/: test.ipynb
util/: filtering_jeju_grid.py  load_jeju_accidents.py  load_tourism_docs.py  stopwords.py  update_jeju_accidents_date.py
(+7 files in other folders)
